# vision-circuit-inspector

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
backend/scripts/: benchmark_pairs.py
backend/src/circuit_inspector/: __init__.py  cli.py  config.py  mapping.py  models.py  pipeline.py
backend/src/circuit_inspector/api/: __init__.py  app.py  mappers.py  schemas.py  streaming.py
backend/src/circuit_inspector/board/: __init__.py  calibration_io.py  debug.py  grid_mapper.py  hole_detector.py  rectifier.py  registration.py
backend/src/circuit_inspector/comparison/: __init__.py  box_scale.py  comparator.py  registered.py  registered_audit.py  report.py  selection.py  structural.py
backend/src/circuit_inspector/detection/: __init__.py  base.py  button_detector.py  capacitor_detector.py  ldr_detector.py  led_detector.py  potentiometer_detector.py  registry.py  resistor_detector.py  wire_detector.py
backend/src/circuit_inspector/io/: __init__.py  image_loader.py
backend/tests/: conftest.py
backend/tests/fixtures/: __init__.py  synthetic_board.py
backend/tests/integration/: test_api.py  test_pipeline.py  test_real_pair_noise.py
backend/tests/unit/: test_annotator.py  test_api_mappers.py  test_box_scale.py  test_calibrate_tool.py  test_calibration_io.py  test_comparator.py  test_config.py  test_detectors.py  test_grid_mapper.py  test_mapping.py  test_models.py  test_rectifier.py  test_registered.py  test_registration.py  test_selection.py  test_structural.py
docs/: pipeline.md  (+1 more)
(+30 files in other folders)
