[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-inspector"
version = "0.1.0"
description = "Comparacao por visao computacional de circuitos em protoboard (gabarito vs aluno)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
]

[project.scripts]
circuit-inspector = "circuit_inspector.cli:main"
circuit-inspector-calibrate = "circuit_inspector.tools.calibrate:main"
circuit-inspector-api = "circuit_inspector.api.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "integration: testes que rodam o pipeline completo sobre imagens reais",
]
